# obstack-standalone

./: CMakeLists.txt  README.md  obstack.c  obstack.h  tst-obstack.c
